code/force-app/main/default/objects/Lead/fields/Acceptance_Date__c.field-meta.xml
<CustomField>
    <fullName>Acceptance_Date__c</fullName>
    <label>承接日期時間(分行轉介)</label>
    <type>Date</type>
</CustomField>