code/force-app/main/default/objects/Lead/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <label>開戶狀態</label>
    <length>10</length>
    <type>Text</type>
</CustomField>