code/force-app/main/default/objects/Lead/fields/Branch_Referral_No__c.field-meta.xml
<CustomField>
    <fullName>Branch_Referral_No__c</fullName>
    <label>轉介單號(分行轉介)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>