code/force-app/main/default/objects/Lead/fields/BRANCHCODE__c.field-meta.xml
<CustomField>
    <fullName>BRANCHCODE__c</fullName>
    <label>轉介人分行代碼</label>
    <length>20</length>
    <type>Text</type>
</CustomField>