code/force-app/main/default/objects/Lead/fields/Business_Address__c.field-meta.xml
<CustomField>
    <fullName>Business_Address__c</fullName>
    <label>公司地址</label>
    <type>Address</type>
</CustomField>