code/force-app/main/default/objects/Lead/fields/Campaign_Alert_Day__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Alert_Day__c</fullName>
    <formula>Related_Campaign__r.Campaign_End_Date__c - 10</formula>
    <label>名單開發提醒日</label>
    <type>Date</type>
</CustomField>