code/force-app/main/default/objects/Lead/fields/Campaign_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Campaign_End_Date__c</fullName>
    <formula>Related_Campaign__r.Campaign_End_Date__c</formula>
    <label>名單開發迄日</label>
    <type>Date</type>
</CustomField>