code/force-app/main/default/objects/Lead/fields/Campaign_No__c.field-meta.xml
<CustomField>
    <fullName>Campaign_No__c</fullName>
    <formula>Related_Campaign__r.Campaign_No__c</formula>
    <label>行銷活動編號</label>
    <type>Text</type>
</CustomField>