code/force-app/main/default/objects/Lead/fields/Campaign_Result__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Result__c</fullName>
    <label>行銷成果</label>
    <length>20</length>
    <type>Text</type>
</CustomField>