code/force-app/main/default/objects/Lead/fields/Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Close_Date__c</fullName>
    <label>結案日期時間(分行轉介)</label>
    <type>DateTime</type>
</CustomField>