code/force-app/main/default/objects/Lead/fields/Customer_Data_Country__c.field-meta.xml
<CustomField>
    <fullName>Customer_Data_Country__c</fullName>
    <label>商機所屬國別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CUB_Country</valueSetName>
    </valueSet>
</CustomField>