code/force-app/main/default/objects/Lead/fields/Data_Date__c.field-meta.xml
<CustomField>
    <fullName>Data_Date__c</fullName>
    <label>資料擷取月</label>
    <length>20</length>
    <type>Text</type>
</CustomField>