code/force-app/main/default/objects/Lead/fields/Deposit_Avg__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Avg__c</fullName>
    <label>近一年平均存款</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>