code/force-app/main/default/objects/Lead/fields/Deposit_Foreign__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Foreign__c</fullName>
    <label>近一年外幣帳戶平均存款(折合台幣)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>