code/force-app/main/default/objects/Lead/fields/Deposit_NTD__c.field-meta.xml
<CustomField>
    <fullName>Deposit_NTD__c</fullName>
    <label>近一年台幣帳戶平均存款</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>