code/force-app/main/default/objects/Lead/fields/Develop_Remark__c.field-meta.xml
<CustomField>
    <fullName>Develop_Remark__c</fullName>
    <label>說明欄</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>