code/force-app/main/default/objects/Lead/fields/Development_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Development_Deadline__c</fullName>
    <formula>Related_Campaign__r.Campaign_End_Date__c</formula>
    <label>開發期限</label>
    <type>Date</type>
</CustomField>