code/force-app/main/default/objects/Lead/fields/Distribute_Bsn_District__c.field-meta.xml
<CustomField>
    <fullName>Distribute_Bsn_District__c</fullName>
    <label>派發大地理區</label>
    <length>20</length>
    <type>Text</type>
</CustomField>