code/force-app/main/default/objects/Lead/fields/Distribute_Division__c.field-meta.xml
<CustomField>
    <fullName>Distribute_Division__c</fullName>
    <label>派發區部</label>
    <length>20</length>
    <type>Text</type>
</CustomField>