code/force-app/main/default/objects/Lead/fields/Distribute_Team_Cbsm__c.field-meta.xml
<CustomField>
    <fullName>Distribute_Team_Cbsm__c</fullName>
    <label>派發科別</label>
    <length>20</length>
    <type>Text</type>
</CustomField>