code/force-app/main/default/objects/Lead/fields/Distribution_Status__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Status__c</fullName>
    <formula>IF(ISPICKVAL($User.Belong_Country__c, &quot;TW&quot;), 
  IF(BEGINS(OwnerId, &quot;005&quot;), &quot;已派發至指定人員&quot;, &quot;仍在Queue中&quot;),
  IF(BEGINS(OwnerId, &quot;005&quot;), &quot;Has Distributed to Designated User&quot;, &quot;Still in Queue&quot;)
)</formula>
    <label>派發狀態</label>
    <type>Text</type>
</CustomField>