code/force-app/main/default/objects/Lead/fields/Dp_M_Branch_Name__c.field-meta.xml
<CustomField>
    <fullName>Dp_M_Branch_Name__c</fullName>
    <label>最大存款行</label>
    <length>10</length>
    <type>Text</type>
</CustomField>