code/force-app/main/default/objects/Lead/fields/Due_Alert__c.field-meta.xml
<CustomField>
    <fullName>Due_Alert__c</fullName>
    <formula>Related_Campaign__r.Campaign_End_Date__c - 10 = TODAY()</formula>
    <label>到期提醒</label>
    <type>Checkbox</type>
</CustomField>