code/force-app/main/default/objects/Lead/fields/Duplicate_Lead_Exists__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Lead_Exists__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>當此欄位被勾起時，表示此商機可能有其他人正進行開發</inlineHelpText>
    <label>有重複商機存在</label>
    <type>Checkbox</type>
</CustomField>