code/force-app/main/default/objects/Lead/fields/Establish_Date__c.field-meta.xml
<CustomField>
    <fullName>Establish_Date__c</fullName>
    <label>公司設立日</label>
    <type>Date</type>
</CustomField>