code/force-app/main/default/objects/Lead/fields/FinServ__RelatedAccount__c.field-meta.xml
<CustomField>
    <fullName>FinServ__RelatedAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Related Leads</relationshipLabel>
    <relationshipName>RelatedLeads</relationshipName>
    <type>Lookup</type>
</CustomField>