code/force-app/main/default/objects/Lead/fields/Fm_Branch_Name__c.field-meta.xml
<CustomField>
    <fullName>Fm_Branch_Name__c</fullName>
    <label>經管理專所屬分行</label>
    <length>20</length>
    <type>Text</type>
</CustomField>