code/force-app/main/default/objects/Lead/fields/Fm_Status__c.field-meta.xml
<CustomField>
    <fullName>Fm_Status__c</fullName>
    <label>理專經管狀態</label>
    <length>20</length>
    <type>Text</type>
</CustomField>