code/force-app/main/default/objects/Lead/fields/Good_Physique__c.field-meta.xml
<CustomField>
    <fullName>Good_Physique__c</fullName>
    <label>體質良好</label>
    <length>10</length>
    <type>Text</type>
</CustomField>