code/force-app/main/default/objects/Lead/fields/Hedging_Potential__c.field-meta.xml
<CustomField>
    <fullName>Hedging_Potential__c</fullName>
    <label>高避險潛力</label>
    <length>10</length>
    <type>Text</type>
</CustomField>