code/force-app/main/default/objects/Lead/fields/Introduce_Date__c.field-meta.xml
<CustomField>
    <fullName>Introduce_Date__c</fullName>
    <label>轉介單建立日期時間(分行轉介)</label>
    <type>DateTime</type>
</CustomField>