code/force-app/main/default/objects/Lead/fields/Introduce_Invalid_Date__c.field-meta.xml
<CustomField>
    <fullName>Introduce_Invalid_Date__c</fullName>
    <formula>DATETIMEVALUE(ADDMONTHS(CreatedDate, 6) - 1)</formula>
    <label>轉介單到期日(法金轉介)</label>
    <type>DateTime</type>
</CustomField>