code/force-app/main/default/objects/Lead/fields/KYC_Customer_Relation__c.field-meta.xml
<CustomField>
    <fullName>KYC_Customer_Relation__c</fullName>
    <label>與客戶KYC關係類別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>K1</fullName>
                <label>單位授信戶</label>
            </value>
            <value>
                <fullName>K2</fullName>
                <label>單位授信戶之關係戶</label>
            </value>
            <value>
                <fullName>K3</fullName>
                <label>拜訪中客戶</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>