code/force-app/main/default/objects/Lead/fields/Lead_Expired__c.field-meta.xml
<CustomField>
    <fullName>Lead_Expired__c</fullName>
    <formula>Related_Campaign__r.Campaign_End_Date__c &lt; TODAY()</formula>
    <label>專案到期</label>
    <type>Checkbox</type>
</CustomField>