code/force-app/main/default/objects/Lead/fields/Lead_Notes__c.field-meta.xml
<CustomField>
    <fullName>Lead_Notes__c</fullName>
    <label>商機備註</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>