code/force-app/main/default/objects/Lead/fields/Lead_Owner_Employee_No__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner_Employee_No__c</fullName>
    <formula>Owner:User.Employee_No__c</formula>
    <label>商機擁有者員編</label>
    <type>Text</type>
</CustomField>