code/force-app/main/default/objects/Lead/fields/Lead_Status_No__c.field-meta.xml
<CustomField>
    <fullName>Lead_Status_No__c</fullName>
    <formula>TEXT(Status)</formula>
    <label>開發狀態編號</label>
    <type>Text</type>
</CustomField>