code/force-app/main/default/objects/Lead/fields/Lead_Team__c.field-meta.xml
<CustomField>
    <fullName>Lead_Team__c</fullName>
    <label>商機所屬科別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Team</valueSetName>
    </valueSet>
</CustomField>