code/force-app/main/default/objects/Lead/fields/Nearest_Branch_Name__c.field-meta.xml
<CustomField>
    <fullName>Nearest_Branch_Name__c</fullName>
    <label>鄰近分行</label>
    <length>20</length>
    <type>Text</type>
</CustomField>