code/force-app/main/default/objects/Lead/fields/Nearest_Bsn__c.field-meta.xml
<CustomField>
    <fullName>Nearest_Bsn__c</fullName>
    <label>鄰近分行區部</label>
    <length>20</length>
    <type>Text</type>
</CustomField>