code/force-app/main/default/objects/Lead/fields/Note1__c.field-meta.xml
<CustomField>
    <fullName>Note1__c</fullName>
    <label>備註1</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>