code/force-app/main/default/objects/Lead/fields/Note2__c.field-meta.xml
<CustomField>
    <fullName>Note2__c</fullName>
    <label>備註2</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>