code/force-app/main/default/objects/Lead/fields/Other_Reason__c.field-meta.xml
<CustomField>
    <fullName>Other_Reason__c</fullName>
    <label>其他原因</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>