code/force-app/main/default/objects/Lead/fields/Owner_Unit_Change__c.field-meta.xml
<CustomField>
    <fullName>Owner_Unit_Change__c</fullName>
    <formula>AND(
  BEGINS(OwnerId, &quot;005&quot;), 
  TEXT(Owner:User.Team__c) != TEXT(Lead_Team__c)
)</formula>
    <label>商機擁有者單位異動</label>
    <type>Checkbox</type>
</CustomField>