code/force-app/main/default/objects/Lead/fields/Permanent_Address__c.field-meta.xml
<CustomField>
    <fullName>Permanent_Address__c</fullName>
    <label>戶籍地址</label>
    <type>Address</type>
</CustomField>