code/force-app/main/default/objects/Lead/fields/Potential_Type__c.field-meta.xml
<CustomField>
    <fullName>Potential_Type__c</fullName>
    <label>潛力類別</label>
    <length>20</length>
    <type>Text</type>
</CustomField>