code/force-app/main/default/objects/Lead/fields/Previous_Lead_Status__c.field-meta.xml
<CustomField>
    <fullName>Previous_Lead_Status__c</fullName>
    <label>前一商機狀態</label>
    <length>20</length>
    <type>Text</type>
</CustomField>