code/force-app/main/default/objects/Lead/fields/PROCESSDESC__c.field-meta.xml
<CustomField>
    <fullName>PROCESSDESC__c</fullName>
    <formula>Owner:User.LastName &amp; Owner:User.FirstName &amp; &quot; &quot; &amp; TEXT(DATEVALUE(CreatedDate))</formula>
    <label>說明歷程</label>
    <type>Text</type>
</CustomField>