code/force-app/main/default/objects/Lead/fields/Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Product_Id__c</fullName>
    <label>商品代碼</label>
    <length>20</length>
    <type>Text</type>
</CustomField>