code/force-app/main/default/objects/Lead/fields/Product_Lock_Period__c.field-meta.xml
<CustomField>
    <fullName>Product_Lock_Period__c</fullName>
    <label>商品鎖定月數</label>
    <length>20</length>
    <type>Text</type>
</CustomField>