code/force-app/main/default/objects/Lead/fields/Receive_RM__c.field-meta.xml
<CustomField>
    <fullName>Receive_RM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>承接人</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Receive_RM</relationshipName>
    <type>Lookup</type>
</CustomField>