code/force-app/main/default/objects/Lead/fields/Receive_Unit_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Receive_Unit_Picklist__c</fullName>
    <label>承接單位</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Unit_Name</valueSetName>
    </valueSet>
</CustomField>