code/force-app/main/default/objects/Lead/fields/Receiver_Id_Formula__c.field-meta.xml
<CustomField>
    <fullName>Receiver_Id_Formula__c</fullName>
    <formula>Receive_RM__r.Employee_No__c</formula>
    <label>承接人員編</label>
    <type>Text</type>
</CustomField>