code/force-app/main/default/objects/Lead/fields/Receiver_Role__c.field-meta.xml
<CustomField>
    <fullName>Receiver_Role__c</fullName>
    <label>承接人角色</label>
    <length>20</length>
    <type>Text</type>
</CustomField>