code/force-app/main/default/objects/Lead/fields/Referral_Case_No__c.field-meta.xml
<CustomField>
    <fullName>Referral_Case_No__c</fullName>
    <displayFormat>CUB_{YYYY}{MM}{DD}{00000}</displayFormat>
    <label>Salesforce轉介單號</label>
    <type>AutoNumber</type>
</CustomField>