code/force-app/main/default/objects/Lead/fields/Referral_Date__c.field-meta.xml
<CustomField>
    <fullName>Referral_Date__c</fullName>
    <label>轉介日期時間</label>
    <type>DateTime</type>
</CustomField>