code/force-app/main/default/objects/Lead/fields/Referral_Id_Formula__c.field-meta.xml
<CustomField>
    <fullName>Referral_Id_Formula__c</fullName>
    <formula>Referrer_Name__r.Employee_No__c</formula>
    <label>轉介人員編(法金轉介)</label>
    <type>Text</type>
</CustomField>