code/force-app/main/default/objects/Lead/fields/Referral_Item__c.field-meta.xml
<CustomField>
    <fullName>Referral_Item__c</fullName>
    <label>轉介商品名稱</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>pd42</fullName>
                <default>true</default>
                <label>pd42: 複雜型法人授信</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>