code/force-app/main/default/objects/Lead/fields/Referral_Record_Status__c.field-meta.xml
<CustomField>
    <fullName>Referral_Record_Status__c</fullName>
    <label>轉介單狀態</label>
    <length>20</length>
    <type>Text</type>
</CustomField>