code/force-app/main/default/objects/Lead/fields/Referral_Rejected_Reason__c.field-meta.xml
<CustomField>
    <fullName>Referral_Rejected_Reason__c</fullName>
    <label>不承接原因</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>