code/force-app/main/default/objects/Lead/fields/Referral_Result__c.field-meta.xml
<CustomField>
    <fullName>Referral_Result__c</fullName>
    <label>轉介結果</label>
    <length>20</length>
    <type>Text</type>
</CustomField>