code/force-app/main/default/objects/Lead/fields/Referral_Status__c.field-meta.xml
<CustomField>
    <fullName>Referral_Status__c</fullName>
    <label>商機轉介狀態</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>R2</fullName>
                <label>審核中</label>
            </value>
            <value>
                <fullName>R3</fullName>
                <label>審核退回</label>
            </value>
            <value>
                <fullName>R4</fullName>
                <label>承接單位派發中</label>
            </value>
            <value>
                <fullName>R5</fullName>
                <label>已指派承接RM</label>
            </value>
            <value>
                <fullName>R6</fullName>
                <label>不承接此轉介</label>
            </value>
            <value>
                <fullName>R7</fullName>
                <label>轉介關係成立</label>
            </value>
            <value>
                <fullName>R1</fullName>
                <default>true</default>
                <label>轉介商機建立</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>