code/force-app/main/default/objects/Lead/fields/Referral_Suggestion__c.field-meta.xml
<CustomField>
    <fullName>Referral_Suggestion__c</fullName>
    <label>轉介建議</label>
    <length>20</length>
    <type>Text</type>
</CustomField>