code/force-app/main/default/objects/Lead/fields/Referral_System_No__c.field-meta.xml
<CustomField>
    <fullName>Referral_System_No__c</fullName>
    <label>轉介系統唯一序號</label>
    <length>20</length>
    <type>Text</type>
</CustomField>