code/force-app/main/default/objects/Lead/fields/Referral_Title__c.field-meta.xml
<CustomField>
    <fullName>Referral_Title__c</fullName>
    <label>轉介人職稱</label>
    <length>20</length>
    <type>Text</type>
</CustomField>