code/force-app/main/default/objects/Lead/fields/Referral_Validate_Reason__c.field-meta.xml
<CustomField>
    <fullName>Referral_Validate_Reason__c</fullName>
    <label>轉介檢核原因</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>