code/force-app/main/default/objects/Lead/fields/Referrer_Employee_No_Text__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Employee_No_Text__c</fullName>
    <label>轉介人員編(分行轉介)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>