code/force-app/main/default/objects/Lead/fields/Referrer_Name__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>轉介人(法金轉介)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Referrer_Name</relationshipName>
    <type>Lookup</type>
</CustomField>