code/force-app/main/default/objects/Lead/fields/Referrer_Role__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Role__c</fullName>
    <label>轉介人角色</label>
    <length>20</length>
    <type>Text</type>
</CustomField>