code/force-app/main/default/objects/Lead/fields/Referrer_Role_Name__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Role_Name__c</fullName>
    <label>轉介人角色名稱</label>
    <length>20</length>
    <type>Text</type>
</CustomField>