code/force-app/main/default/objects/Lead/fields/Referrer_Unit__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Unit__c</fullName>
    <label>轉介單位</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Unit_Name</valueSetName>
    </valueSet>
</CustomField>