code/force-app/main/default/objects/Lead/fields/Rejected_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejected_Reason__c</fullName>
    <label>拒絕原因</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>E1</fullName>
                <label>暫無需求</label>
            </value>
            <value>
                <fullName>E2</fullName>
                <label>利率因素暫無申辦意願</label>
            </value>
            <value>
                <fullName>E3</fullName>
                <label>額度因素暫無申辦意願</label>
            </value>
            <value>
                <fullName>E4</fullName>
                <label>已有主力往來銀行暫無申辦意願</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>