code/force-app/main/default/objects/Lead/fields/Rejected_Reason_No__c.field-meta.xml
<CustomField>
    <fullName>Rejected_Reason_No__c</fullName>
    <formula>TEXT(Rejected_Reason__c)</formula>
    <label>拒絕原因編號</label>
    <type>Text</type>
</CustomField>