code/force-app/main/default/objects/Lead/fields/Related_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>相關帳戶</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (相關帳戶)</relationshipLabel>
    <relationshipName>Related_Account</relationshipName>
    <type>Lookup</type>
</CustomField>