code/force-app/main/default/objects/Lead/fields/Related_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Related_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>行銷活動名稱</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Related_Campaign</relationshipName>
    <type>Lookup</type>
</CustomField>