code/force-app/main/default/objects/Lead/fields/Related_Group__c.field-meta.xml
<CustomField>
    <fullName>Related_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>相關集團</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Group</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (相關集團)</relationshipLabel>
    <relationshipName>Related_Group</relationshipName>
    <type>Lookup</type>
</CustomField>