code/force-app/main/default/objects/Lead/fields/Risk_Concern__c.field-meta.xml
<CustomField>
    <fullName>Risk_Concern__c</fullName>
    <label>風險關注</label>
    <length>10</length>
    <type>Text</type>
</CustomField>