code/force-app/main/default/objects/Lead/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <formula>TEXT($User.Customer_Segment__c)</formula>
    <label>角色</label>
    <type>Text</type>
</CustomField>