code/force-app/main/default/objects/Lead/fields/Salary_Transfer_Potential__c.field-meta.xml
<CustomField>
    <fullName>Salary_Transfer_Potential__c</fullName>
    <label>薪轉潛力</label>
    <length>10</length>
    <type>Text</type>
</CustomField>