code/force-app/main/default/objects/Lead/fields/SALESBRAREACODE__c.field-meta.xml
<CustomField>
    <fullName>SALESBRAREACODE__c</fullName>
    <label>承接人分行區部代碼</label>
    <length>20</length>
    <type>Text</type>
</CustomField>