code/force-app/main/default/objects/Lead/fields/SALESBRCODE__c.field-meta.xml
<CustomField>
    <fullName>SALESBRCODE__c</fullName>
    <label>承接人分行代碼</label>
    <length>20</length>
    <type>Text</type>
</CustomField>