code/force-app/main/default/objects/Lead/fields/Same_Area__c.field-meta.xml
<CustomField>
    <fullName>Same_Area__c</fullName>
    <label>同一大地理區</label>
    <length>20</length>
    <type>Text</type>
</CustomField>