code/force-app/main/default/objects/Lead/fields/Staging_Lead_Id__c.field-meta.xml
<CustomField>
    <fullName>Staging_Lead_Id__c</fullName>
    <label>名單Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>