code/force-app/main/default/objects/Lead/fields/Sub_Industry__c.field-meta.xml
<CustomField>
    <fullName>Sub_Industry__c</fullName>
    <label>產業小類</label>
    <length>200</length>
    <type>Text</type>
</CustomField>