code/force-app/main/default/objects/Lead/fields/Suggest_Disp_Branch__c.field-meta.xml
<CustomField>
    <fullName>Suggest_Disp_Branch__c</fullName>
    <label>建議派發分行</label>
    <length>20</length>
    <type>Text</type>
</CustomField>