code/force-app/main/default/objects/Lead/fields/Target_Industry__c.field-meta.xml
<CustomField>
    <fullName>Target_Industry__c</fullName>
    <label>目標產業</label>
    <length>200</length>
    <type>Text</type>
</CustomField>