code/force-app/main/default/objects/Lead/fields/Tax_Id__c.field-meta.xml
<CustomField>
    <fullName>Tax_Id__c</fullName>
    <label>稅編號碼</label>
    <length>200</length>
    <type>Text</type>
</CustomField>