code/force-app/main/default/objects/Lead/fields/TELLERBRAREACODE__c.field-meta.xml
<CustomField>
    <fullName>TELLERBRAREACODE__c</fullName>
    <label>轉介人分行區部代碼</label>
    <length>20</length>
    <type>Text</type>
</CustomField>