code/force-app/main/default/objects/Lead/fields/Tier__c.field-meta.xml
<CustomField>
    <fullName>Tier__c</fullName>
    <label>層級</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>